# ra9

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  config.json  pyproject.toml  start-app.sh  start.sh
.claude/: settings.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
migrations/: env.py
migrations/versions/: 58e31714cbfc_add_mood_history_table.py  5b1b764bb98c_phase1_emotional_episodes.py  929ac4e279a9_phase0_tables.py  a3f7c9e01d42_phase_anamnesis_memory_columns.py  db76770ffb64_add_embodied_state_table.py  dfbaaa807602_add_mood_state_table.py
src/emotive/: app_context.py  logging.py  server.py
tests/: conftest.py
tests/test_api/: test_server.py
tests/test_config/: test_audit.py  test_inner_world_config.py  test_loader.py  test_schema.py  test_schema_phase15.py
tests/test_db/: test_memory_queries.py
tests/test_embeddings/: test_service.py
tests/test_layers/: test_appraisal.py  test_episodes.py
tests/test_llm/: test_adapter.py
tests/test_memory/: test_base.py  test_consolidation.py  test_episodic.py  test_flashbulb.py  test_procedural.py  test_semantic.py  test_session_cleanup.py  test_smart_consolidation.py
tests/test_runtime/: test_event_bus.py  test_sensory_buffer.py  test_working_memory.py
tests/test_subsystems/: test_amygdala.py  test_anamnesis.py  test_appraisal_loop.py  test_association_cortex.py  test_conflict.py  test_context_inner_world.py  test_context_tagging.py  test_dmn.py  test_dmn_enhanced.py  test_dynamic_threshold.py  test_embodied.py  test_extract_person_name.py  test_felt_mood.py  test_fixes.py  test_foundation.py  test_hippocampus.py  test_inner_speech.py  test_inner_speech_memory.py  test_inner_voice.py  test_metacognition.py  test_mood.py  test_person_trust.py  test_predictive.py  test_prefrontal.py  test_procedural_encoding.py  test_procedural_framing.py  test_repetition.py  test_significance_gate.py  test_social_perception.py  test_within_session_homeostasis.py  test_workspace.py
tests/test_thalamus/: test_connection_safety.py  test_debug.py  test_inner_world_integration.py  test_pool_safety.py  test_session.py
(+152 files in other folders)
